MyFaces Release Notes
=====================

----------------------------------------------------------------------
Changes in Release 0.3.0

* This is a major release, that has lots of changes to make MyFaces
  conform to the new EA3 specification.

----------------------------------------------------------------------
Changes in Release 0.1.4

* tons of adds, changes and fixes to better conform to the specification.
* List- and GridRenderer, new sample pages

----------------------------------------------------------------------
Changes in Release 0.1.3

* new features
    - alternative servlet-mapping by file extension:
      Instead of mapping the FacesServlet with the virtual path
      "/faces/*", it's now possible to map the Servlet to "*.jsf".
      This new mapping is the default mapping method in this release.

----------------------------------------------------------------------
Changes in Release 0.1.2

* new features
    - detailed "Features" page

* cosmetic changes
    - imports optimized
    - MessageListRenderer moved to subpackage "ext"

* bug fixes:
    - state saving and restoring of "stringValue" Attribute fixed

----------------------------------------------------------------------
Changes in Release 0.1.1

Sun asked me to remove the file "jsf-api.jar" from the public
distribution. (Release 0.1 will no longer be available)


Copyright (C) 2003  The MyFaces Team (http://myfaces.sourceforge.net)