@@ -53,6 +53,8 @@ StateZipping = false
 # that must be preserved) you should set this configuration option to false.
 # If all your beans are "clever" or in application or session scope you can
 # set this option to true.
+#
+# deprecated - always leave true!
 ComponentsTransientByDefault = true
 
 #
